# newtree

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: apt-repo.yml  release.yml
scripts/: release.sh
src/: main.rs  tui.rs
